@@ -151,7 +151,7 @@ describe 'FormHelper' do
 
       it 'is set to the configured custom field_error_proc' do
         field_error_proc = mock()
-        Formtastic::Helpers::FormHelper.field_error_proc = field_error_proc
+        Formtastic::Helpers::FormHelper.formtastic_field_error_proc = field_error_proc
         semantic_form_for(@new_post, :url => '/hello') do |builder|
           ::ActionView::Base.field_error_proc.should == field_error_proc
         end
@@ -159,7 +159,7 @@ describe 'FormHelper' do
       
       it 'is restored to its original value after the form is rendered' do
         lambda do 
-          Formtastic::Helpers::FormHelper.field_error_proc = proc {""}
+          Formtastic::Helpers::FormHelper.formtastic_field_error_proc = proc {""}
           semantic_form_for(@new_post, :url => '/hello') { |builder| }
         end.should_not change(::ActionView::Base, :field_error_proc)
       end
